code tidy up